--- a/contacts-api-service.yml
+++ b/contacts-api-service.yml
@@ -6,7 +6,7 @@ spec:
   ports:
   - name: http
     port: 3000
-    targetPort: 3000
+    nodePort: 3000
   selector:
     app: contacts-api
   type: NodePort
