--- a/contacts-api-service.yml
+++ b/contacts-api-service.yml
@@ -7,6 +7,7 @@ spec:
   - name: http
     port: 3000
     nodePort: 30500
+    targetPort: 3000
   selector:
     app: contacts-api
   type: NodePort
