--- a/postgres.yml
+++ b/postgres.yml
@@ -1,4 +1,20 @@
 apiVersion: v1
+kind: Service
+metadata:
+  name: postgres
+spec:
+  ports:
+  - name: pgql
+    port: 5432
+    nodePort: 30501
+    targetPort: 5432
+    protocol: TCP
+  selector:
+    app: postgres
+  type: NodePort
+
+---
+apiVersion: v1
 kind: ReplicationController
 metadata:
   name: postgres
