--- a/postgres.yml
+++ b/postgres.yml
@@ -27,14 +27,14 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:9.4
+          image: latest
           env:
             - name: POSTGRES_USER
-              value: admin
+              value: test
             - name: POSTGRES_PASSWORD
-              value: admin
+              value: test
             - name: POSTGRES_DB
-              value: admin
+              value: contacts
             - name: PGDATA
               value: /var/lib/postgresql/data/pgdata
           ports:
