--- a/contacts-ui-deployment.yml
+++ b/contacts-ui-deployment.yml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: contacts-ui
+  name: CONTACTS_APP_NAME
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: contacts-ui
+        app: CONTACTS_APP_NAME
     spec:
       containers:
-        - name: contacts-ui
+        - name: CONTACTS_APP_NAME
           image: CONTACTS_UI_IMAGE
           ports:
             - containerPort: 3000
