--- a/contacts-ui-deployment.yml
+++ b/contacts-ui-deployment.yml
@@ -10,7 +10,7 @@ spec:
         app: contacts-ui
     spec:
       containers:
-        - name: CONTACTS_APP_NAME
+        - name: contacts-ui
           image: CONTACTS_UI_IMAGE
           ports:
             - containerPort: 3000
